# rompy-ww3

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  AGENTS_TESTS.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  generate_config_schema.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  sitemap.xml  tbump.toml  test_curv_implementation.py  test_smc_implementation.py  test_unst_implementation.py  tox.ini
.agents/: QWEN.md  README.md  agent-linker.sh  agents.json  opencode.md  post-checkout.hook  pre-commit.hook
.github/: ISSUE_TEMPLATE.md
.sisyphus/: boulder.json  convert_regtests.py
api/: index.html
architecture/: index.html
contributing/: index.html
docker/: AGENTS.md  Dockerfile  comp.Gnu_fix
docs/: AGENTS.md  Makefile  api.md  architecture.md  architecture.rst  conf.py  config-schema.md  config_schema.json  contributing.md  index.md  index.rst  installation.md  installation.rst  make.bat  modules.rst  namelists.md  usage.md  usage.rst
examples/: AGENTS.md  README.md  global_3deg_datamesh.yaml  global_3deg_homog.yaml  global_3deg_pipeline.yaml  global_3deg_pipeline_with_includes.yaml  multi_grid_example.py  postprocess_transfer_example.yaml
installation/: index.html
namelists/: index.html
regtests/: INPUT_DATA.md  INTEGRATION_TEST.md  README_DOWNLOAD.md  download_input_data.py  run_regression_tests.py  ww3_multi_completion_plan.md
search/: search_index.json
tests/: AGENTS.md  __init__.py  conftest.py  diagnose_namelists.py  generate_namelist_report.py  test_additional_namelists.py  test_bounc.py  (+28 more)
(+367 files in other folders)
