[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rompy_ww3"
description = "Rompy WW3 Config package."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Rompy Developers", email = "developers@rompy.com" }]
maintainers = [{ name = "Rompy Developers", email = "developers@rompy.com" }]
classifiers = []
license = { text = "Apache Software License 2.0" }
dependencies = ["rompy", "typer", "rich"]

dynamic = ["version"]

[project.optional-dependencies]
dev = ["coverage", "mypy", "pytest", "ruff", "black", "requests"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[project.scripts]
rompy_ww3 = "rompy_ww3.cli:app"

[project.entry-points."rompy.config"]
ww3shel = "rompy_ww3.config:ShelConfig"
ww3multi = "rompy_ww3.config:MultiConfig"

 [project.entry-points."rompy.postprocess.config"]
 ww3_transfer = "rompy_ww3.postprocess.config:WW3TransferConfig"

[project.entry-points."rompy.source"]
# Register here any new source. For example:
# ww3_source_type = "rompy_ww3.source:WW3Source"

[project.urls]
bugs = "https://github.com/rom-py/rompy-ww3/issues"
changelog = "https://github.com/rom-py/rompy-ww3/blob/main/CHANGELOG.md"
homepage = "https://github.com/rom-py/rompy-ww3"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools.dynamic]
version = { attr = "rompy_ww3.__version__" }
